--- a/BabyNoggin/css/style.css
+++ b/BabyNoggin/css/style.css
@@ -904,6 +904,31 @@ div.inside, div.outside {
   font-size: 1rem;
   text-align: center; }
 
+.milestone-pages .milestone-header h2 {
+  font-size: 1.2rem;
+  text-align: center;
+  color: #159fc0;
+  margin-bottom: 4vw;
+  padding: 15vw 0 5vw; }
+
+.milestone-pages .link-block {
+  padding: 20vw 0 15vw; }
+
+.milestone-pages .link-wrapper {
+  width: 15vw;
+  height: 15vw;
+  margin: auto;
+  border: 2px solid #a7a9ac;
+  border-radius: 50%;
+  background-image: url(../img/arrow-right.png);
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position-x: center;
+  background-position-y: center; }
+
+#mil-activity-page .video {
+  width: 100%; }
+
 @media (min-width: 350px) {
   html {
     font-size: 21px; }
