--- a/BabyNoggin/css/style.css
+++ b/BabyNoggin/css/style.css
@@ -915,16 +915,19 @@ div.inside, div.outside {
   padding: 20vw 0 15vw; }
 
 .milestone-pages .link-wrapper {
+  padding: 3vw;
   width: 15vw;
   height: 15vw;
   margin: auto;
   border: 2px solid #a7a9ac;
-  border-radius: 50%;
-  background-image: url(../img/arrow-right.png);
-  background-repeat: no-repeat;
-  background-size: 50%;
-  background-position-x: center;
-  background-position-y: center; }
+  border-radius: 50%; }
+
+.milestone-pages .description {
+  padding: 3vw 5vw 0; }
+
+.milestone-pages .description p {
+  text-align: center;
+  color: #585a5b; }
 
 #mil-activity-page .video {
   width: 100%; }
